# effective_complexity

./: .gitignore  README.md  pyproject.toml  requirements.txt  tutorial.ipynb
effective_complexity/: data.py  ec.py  functions.py  globals.py  main.py  model.py  requirements.txt
effective_complexity/cli/: __init__.py  run.py
effective_complexity/configs/: general.yaml  gpt.yaml  mlp.yaml
effective_complexity/configs/dataset/: cifar.yaml  synthetic.yaml
effective_complexity/configs/model/: cnn.yaml  gpt.yaml  lstm.yaml  mlp.yaml
effective_complexity/datasets/: __init__.py  cifar.py  datasets.py  penntreebank.py  synthetic.py
effective_complexity/models/: __init__.py  cnn.py  gpt2.py  lstm.py  mlp.py  models.py  resnet.py
