[tool.poetry]
name = "effective_complexity"
version = "0.1.0"
description = ""
authors = ["Thomas2710 <thomas.trevisan@studenti.unitn.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.2.1"
matplotlib = "^3.10.0"
ipykernel = "^6.29.5"

[tool.poetry.scripts]
ec = "effective_complexity.ec:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
